# robot-friend

./: .clangd  .gitignore  CLAUDE.md  README.md  justfile  platformio.ini  pyproject.toml
.github/workflows/: ci.yml
FinchObsidian/: Requirements.canvas  Task.md  ai-module.md  board.md  tasks_julian.md
FinchObsidian/implementation-plans/: 2026-06-18-dashboard-testing.md  2026-06-18-dashboard.md  2026-06-19-repo-cleanup.md  2026-06-20-dashboard-telemetry-attach.md  2026-06-21-dashboard-live-sync.md  README.md  diagnostics-dashboard.md  diagnostics-testing.md
arduino/: justfile  platformio.ini
arduino/scripts/: gen_compile_commands.py
arduino/src/: main.cpp
arduino/test/test_example/: test_example.cpp
lib/MathUtils/: MathUtils.cpp
pi/: justfile  setup.sh
python/: README.md  justfile  pyproject.toml
python/src/robot_friend/: camera.py  main.py  resource_handler.py
python/src/robot_friend/dashboard/: README.md  __init__.py  app.py  diagnostics_scenario.py  grid.py  main.py  theme.py
python/src/robot_friend/dashboard/panels/: __init__.py  control_panel.py  log_panel.py  table_panel.py  transcript_panel.py
python/src/robot_friend/dashboard/sources/: __init__.py  data_source.py  dataclass.py  logs.py  speech.py
python/src/robot_friend/dashboard/sources/video/: camera_video_source.py  dashboard_video_source.py  dashboard_video_streams.py
python/src/robot_friend/dashboard/static/: gridstack-init.js  gridstack-overrides.css  gridstack-reset.js  gridstack_head.html  gridstack_init.html  video-stream.html  video-stream.js
python/src/robot_friend/dashboard/static/partials/: video_img.html
python/src/robot_friend/detection/: detection.py  detection_factory.py  detector.py
python/src/robot_friend/detection/backends/hailo/: HailoDetector.py
python/src/robot_friend/detection/backends/ultralytics/: YOLODetector.py
python/src/robot_friend/exceptions/: missing_hardware_exception.py  missing_model_exception.py
python/src/robot_friend/image/: detection.py  detection_factory.py  image_detector.py
python/src/robot_friend/image/backends/hailo/: HailoDetector.py
python/src/robot_friend/image/backends/ultralytics/: YOLODetector.py
python/src/robot_friend/person/: detection.py  person_recognizer.py
python/src/robot_friend/scripts/: download_models.py  download_vosk.py  download_whisper.py
python/src/robot_friend/speech/: speech_detection_model.py  speech_detector.py  speech_detector_factory.py  speech_testing.py  transcript.py
python/src/robot_friend/speech/audio/: sound_device.py  vad_segmenter.py
python/src/robot_friend/speech/backends/faster_whisper/: WhisperTranscriber.py
python/src/robot_friend/speech/backends/vosk/: vosk_model.py  vosk_speech_detector.py
python/src/robot_friend/speech/keywords/: keyword.py  match_keywords.py
python/src/robot_friend/utils/: ABCEnumMeta.py  clean_setup_dir.py  get_current_host.py
python/src/robot_friend/utils/coordinates/: coordinate.py
python/src/robot_friend/utils/finch_logger/: __init__.py
python/tests/: test_hailo_detector.py  test_main.py  test_vad_segmenter.py  test_vosk_transcriber.py
python/tests/diagnostics/: test_bus.py  test_dataclass_render.py  test_logs.py
python/tests/diagnostics/visual/: conftest.py
python/tests/speech/keywords/: test_keyword.py
robot_friend/src/robot_friend/: main.py
robot_friend/tests/: test_main.py
scripts/: gen_compile_commands.py  lib.sh  setup.sh  sync.sh
src/: main.cpp
src/robot_friend/: camera.py  control.py  devices.py  main.py  mjpeg.py  resource_handler.py  robot_server.py
src/robot_friend/audio/: audio_detector.py  audio_detector_factory.py  audio_model.py  audio_testing.py  transcribe_loop.py  transcript.py
src/robot_friend/audio/backends/faster_whisper/: whisper_audio_detector.py
src/robot_friend/audio/capture/: audio.py  sound_device.py  vad_segmenter.py
src/robot_friend/audio/keywords/: keyword.py  match_keywords.py
src/robot_friend/dashboard/: README.md  __init__.py  app.py  bus.py  controls.py  controls_client.py  dashboard_scenario.py  grid.py  main.py  servos.py  servos_client.py
src/robot_friend/dashboard/panels/: control_panel.py  dataclass_panel.py  panel.py  servo_panel.py  state_sync.py  transcript_panel.py  video_panel.py
src/robot_friend/dashboard/sources/: audio.py  dataclass.py  logs.py  robot_log_source.py  telemetry_source.py
src/robot_friend/dashboard/static/: gridstack_head.html  gridstack_init.html  video-stream.html
src/robot_friend/exceptions/: missing_hardware_exception.py
src/robot_friend/image/: detection.py  image_detector.py  image_detector_factory.py
src/robot_friend/scripts/: download_data.py
src/robot_friend/servo/: pwm_driver.py  pwm_driver_factory.py  servo.py  servo_controller.py
src/robot_friend/telemetry/: __init__.py  codec.py  store.py
src/robot_friend/utils/: clean_setup_dir.py  get_current_host.py  jpeg.py  log_buffer.py  mjpeg.py
src/robot_friend/utils/coordinates/: conversion.py  coordinate.py
src/robot_friend/utils/finch_logger/: finch_logger.py
test/test_math/: test_math.cpp
tests/: test_control.py  test_control_e2e.py  test_main.py  test_robot_server.py  test_servo_e2e.py
tests/audio/backends/vosk/: test_vosk_audio_detector.py
tests/audio/capture/: test_sound_device.py  test_vad_segmenter.py
tests/audio/keywords/: test_keyword.py
tests/dashboard/: test_bus.py  test_controls_selection.py  test_dataclass_render.py  test_servo_sync.py  test_state_sync.py
tests/dashboard/sources/: test_robot_log_source.py  test_robot_video_source.py  test_telemetry_source.py
tests/dashboard/visual/: conftest.py  test_gallery.py  test_render.py  test_sync.py
tests/dashboard/visual/gallery/: .gitignore
tests/image/backends/hailo/: test_hailo_detector.py
tests/image/backends/ultralytics/: test_yolo_detector.py
tests/servo/: test_pwm_driver_factory.py  test_servo.py  test_servo_controller.py
tests/servo/backends/fake/: test_fake_pwm_driver.py
tests/telemetry/: test_codec.py  test_e2e.py  test_store.py
tests/utils/coordinates/: test_conversion.py
(+12 files in other folders)
